--- a/css/blocks/hero.scss
+++ b/css/blocks/hero.scss
@@ -1,7 +1,7 @@
 .hero {
     background: $bg-light-blue url("../img/bg/hero-bg-branch.png") no-repeat right;
     position: relative;
-
+    padding-top: 24px;
     &::after {
         @include bg-slice(57px, 98px, "../img/bg/bg-single-leaf.png");
         bottom: -45px;
@@ -13,18 +13,19 @@
     @include container();
     height: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .hero__main {
     display: flex;
-    padding-top: 65px;
 }
 
 .hero__promo {
     margin-right: 77px;
     display: flex;
     flex-direction: column;
-    padding-top: 85px;
+    margin-top: 85px;
 }
 
 .hero__product {
