--- a/css/misc/fonts.scss
+++ b/css/misc/fonts.scss
@@ -1,29 +1,29 @@
 @font-face {
     font-family: "Alegreya Sans";
-    src: url("../fonts/AlegreyaSans/AlegreyaSans-Regular.ttf") format("ttf");
+    src: url("../fonts/AlegreyaSans/Alegreyasans.woff") format("woff");
 }
 
 @font-face {
     font-family: "Alegreya Sans";
-    src: url("../fonts/AlegreyaSans/AlegreyaSans-Light.ttf") format("ttf");
+    src: url("../fonts/AlegreyaSans/Alegreyasanslight.woff") format("woff");
     font-weight: $light;
 }
 
 @font-face {
     font-family: "Alegreya Sans";
-    src: url("../fonts/AlegreyaSans//AlegreyaSans-Medium.ttf.ttf") format("ttf");
+    src: url("../fonts/AlegreyaSans/Alegreyasansmedium.woff") format("woff");
     font-weight: $medium;
 }
 
 @font-face {
     font-family: "Alegreya Sans";
-    src: url("../fonts/AlegreyaSans-Bold.ttf") format("ttf");
+    src: url("../fonts/AlegreyaSans/Alegreyasansbold.woff") format("woff");
     font-weight: bold;
 }
 
 @font-face {
     font-family: "Alegreya Sans";
-    src: url("../fonts/AlegreyaSans/AlegreyaSans-ExtraBold.ttf") format("ttf");
+    src: url("../fonts/AlegreyaSans/Alegreyasansextrabold.woff") format("woff");
     font-weight: $extra-bold;
 }
 
