--- a/css/main.css
+++ b/css/main.css
@@ -309,26 +309,26 @@ template {
 
 @font-face {
   font-family: "Alegreya Sans";
-  src: url("../fonts/AlegreyaSans/AlegreyaSans-Regular.ttf") format("ttf"); }
+  src: url("../fonts/AlegreyaSans/Alegreyasans.woff") format("woff"); }
 
 @font-face {
   font-family: "Alegreya Sans";
-  src: url("../fonts/AlegreyaSans/AlegreyaSans-Light.ttf") format("ttf");
+  src: url("../fonts/AlegreyaSans/Alegreyasanslight.woff") format("woff");
   font-weight: 300px; }
 
 @font-face {
   font-family: "Alegreya Sans";
-  src: url("../fonts/AlegreyaSans//AlegreyaSans-Medium.ttf.ttf") format("ttf");
+  src: url("../fonts/AlegreyaSans/Alegreyasansmedium.woff") format("woff");
   font-weight: 500; }
 
 @font-face {
   font-family: "Alegreya Sans";
-  src: url("../fonts/AlegreyaSans-Bold.ttf") format("ttf");
+  src: url("../fonts/AlegreyaSans/Alegreyasansbold.woff") format("woff");
   font-weight: bold; }
 
 @font-face {
   font-family: "Alegreya Sans";
-  src: url("../fonts/AlegreyaSans/AlegreyaSans-ExtraBold.ttf") format("ttf");
+  src: url("../fonts/AlegreyaSans/Alegreyasansextrabold.woff") format("woff");
   font-weight: 800; }
 
 @font-face {
