--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -2,8 +2,7 @@
     width: 100%;
 }
 
-.header__container {
-    @include container;
+.header__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
