--- a/css/blocks/reviews.scss
+++ b/css/blocks/reviews.scss
@@ -15,20 +15,19 @@
     }
 }
 
-.reviews__container {
-    @include container();
-}
 
 .reviews__title {
     margin-bottom: 35px;
     text-align: center;
 }
 
+.reviews__slider {
+    margin-bottom: 20px;
+}
+
 .reviews__switcher {
-    height: 135px;
     display: flex;
     justify-content: center;
-    align-items: flex-start;  
 }
 
 .reviews__switch-btn--selected {
@@ -45,6 +44,7 @@
     height: 65px;
     border-radius: 50%;
     box-sizing: content-box;
+    border: 5px solid transparent;
     &:hover {
         box-shadow: 0 0 5px $black;
     }
