--- a/css/blocks/why.scss
+++ b/css/blocks/why.scss
@@ -9,10 +9,6 @@
     }
 }
 
-.why__container {
-    @include container;
-}
-
 .why__promo {
     text-align: center;
     margin-bottom: 50px;
@@ -23,12 +19,12 @@
 
 .why__title {
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .why__description {
     @include grey-text;
     text-align: center;
     max-width: 415px;
-    margin-top: 10px;
     font-weight: $light;
 }
