--- a/css/main.css
+++ b/css/main.css
@@ -357,6 +357,10 @@ body {
   min-height: 100%;
   overflow: hidden; }
 
+.container {
+  width: 940px;
+  margin: 0 auto; }
+
 .section {
   height: 100vh;
   min-height: 650px;
@@ -417,9 +421,7 @@ button {
 .header {
   width: 100%; }
 
-.header__container {
-  width: 940px;
-  margin: 0 auto;
+.header__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -492,9 +494,7 @@ button {
     bottom: -45px;
     left: 2.8vw; }
 
-.hero__container {
-  width: 940px;
-  margin: 0 auto;
+.hero__inner {
   height: 100%;
   position: relative;
   display: -webkit-box;
@@ -538,7 +538,7 @@ button {
   line-height: 60px;
   font-weight: bold;
   text-transform: uppercase;
-  height: 190px; }
+  margin-bottom: 10px; }
 
 .hero__info {
   font-size: 21px;
@@ -563,14 +563,13 @@ button {
 
 .hero__feature-snippet {
   font-size: 16px;
-  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-right: 45px; }
 
 .feature-snippet__info {
-  width: 75px; }
+  width: 70px; }
 
 .hero__feature-icon {
   width: 50px;
@@ -618,10 +617,6 @@ button {
     bottom: -110px;
     left: 0; }
 
-.why__container {
-  width: 940px;
-  margin: 0 auto; }
-
 .why__promo {
   text-align: center;
   margin-bottom: 50px;
@@ -637,14 +632,14 @@ button {
   align-items: center; }
 
 .why__title {
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 10px; }
 
 .why__description {
   color: #666666;
   font-size: 18px;
   text-align: center;
   max-width: 415px;
-  margin-top: 10px;
   font-weight: 300px; }
 
 .advantages {
@@ -683,7 +678,7 @@ button {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 30px; }
+  margin-bottom: 35px; }
 
 .advantages__icon {
   fill: none;
@@ -694,7 +689,8 @@ button {
   width: 70px; }
 
 .advantages__title {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  text-align: center; }
   .advantages__title h3 {
     font-size: 27px;
     font-weight: bold;
@@ -732,25 +728,20 @@ button {
     left: 0;
     bottom: -130px; }
 
-.reviews__container {
-  width: 940px;
-  margin: 0 auto; }
-
 .reviews__title {
   margin-bottom: 35px;
   text-align: center; }
 
+.reviews__slider {
+  margin-bottom: 20px; }
+
 .reviews__switcher {
-  height: 135px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start; }
+  justify-content: center; }
 
 .reviews__switch-btn--selected .reviews__small-pic {
   border: 5px solid #0f5a47; }
@@ -763,13 +754,14 @@ button {
   height: 65px;
   border-radius: 50%;
   -webkit-box-sizing: content-box;
-  box-sizing: content-box; }
+  box-sizing: content-box;
+  border: 5px solid transparent; }
   .reviews__small-pic:hover {
     -webkit-box-shadow: 0 0 5px #000000;
     box-shadow: 0 0 5px #000000; }
 
 .review-snippet {
-  height: 345px;
+  min-height: 345px;
   background: url("../img/bg/review-bg-half-circle.jpg") no-repeat top center, #f8faf9 url("../img/bg/review-bg-branch.jpg") no-repeat top right;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
@@ -783,23 +775,25 @@ button {
     display: -ms-flexbox;
     display: flex; }
 
+.review-snippet__userpic {
+  margin-right: 25px; }
+
 .review-snippet__content {
   width: 500px;
-  height: 260px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  padding-left: 25px;
-  text-align: left;
-  padding-top: 15px; }
+  text-align: left; }
 
-.review-snippet__title h3 {
-  font-size: 30px;
-  color: #323232;
-  font-weight: 500;
+.review-snippet__title {
+  margin-bottom: 25px;
   margin-right: auto; }
+  .review-snippet__title h3 {
+    font-size: 30px;
+    color: #323232;
+    font-weight: 500; }
 
 .review-snippet__text {
   color: #666666;
