--- a/css/main.scss
+++ b/css/main.scss
@@ -36,4 +36,5 @@ $icon-light-blue: #aef5fe;
 @import "./blocks/reviews.scss";
 @import "./blocks/review-snippet.scss";
 @import "./blocks/fixed-menu.scss";
+@import "./blocks/accordeon.scss";
 
