--- a/css/main.css
+++ b/css/main.css
@@ -314,7 +314,7 @@ template {
 @font-face {
   font-family: "Alegreya Sans";
   src: url("../fonts/AlegreyaSans/Alegreyasanslight.woff") format("woff");
-  font-weight: 300px; }
+  font-weight: 300; }
 
 @font-face {
   font-family: "Alegreya Sans";
@@ -416,7 +416,8 @@ button {
   background: transparent;
   border: none;
   cursor: pointer;
-  color: inherit; }
+  color: inherit;
+  padding: 0px; }
 
 .header {
   width: 100%; }
@@ -640,7 +641,7 @@ button {
   font-size: 18px;
   text-align: center;
   max-width: 415px;
-  font-weight: 300px; }
+  font-weight: 300; }
 
 .advantages {
   display: -webkit-box;
@@ -826,3 +827,88 @@ button {
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
+
+.team {
+  background: #ffffff url("../img/bg/team-branch-top-right.png") no-repeat top right; }
+  .team::after {
+    content: "";
+    background: url("../img/bg/team-raspberry-bottom-left.png") no-repeat;
+    width: 83px;
+    height: 90px;
+    position: absolute;
+    z-index: 1;
+    bottom: -44px;
+    left: 36px; }
+
+.team__title {
+  text-align: center;
+  margin-bottom: 50px; }
+
+.accordeon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 100%;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  min-height: 444px; }
+
+.accordeon__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 223px; }
+
+.accordeon__pic {
+  width: 223px;
+  height: 292px;
+  margin-bottom: 25px; }
+
+.accordeon__collapsible--active .accordeon__arrow-icon {
+  -webkit-transform: scaleY(-1);
+  -ms-transform: scaleY(-1);
+  transform: scaleY(-1); }
+
+.accordeon__collapsible--active .accordeon__info {
+  height: auto; }
+
+.accordeon__unfolder {
+  margin-bottom: 12px;
+  width: 100%;
+  text-align: center; }
+  .accordeon__unfolder h3 {
+    color: #323232;
+    font-size: 21px;
+    font-weight: 500;
+    display: inline-block;
+    margin-right: 5px; }
+
+.accordeon__arrow-icon {
+  height: 9px;
+  width: 9px;
+  fill: #0f5a47;
+  display: inline-block; }
+
+.accordeon__info {
+  text-align: center;
+  height: 0;
+  overflow: hidden; }
+  .accordeon__info h4 {
+    color: #281e1e;
+    font-size: 18px;
+    margin-bottom: 7px; }
+  .accordeon__info p {
+    color: #666666;
+    font-size: 18px;
+    font-weight: 300; }
