--- a/css/main.scss
+++ b/css/main.scss
@@ -39,4 +39,5 @@ $icon-light-blue: #aef5fe;
 @import "./blocks/fixed-menu.scss";
 @import "./blocks/team.scss";
 @import "./blocks/accordeon.scss";
+@import "./blocks/menu.scss";
 
