--- a/css/misc/layout.scss
+++ b/css/misc/layout.scss
@@ -32,6 +32,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 
 .title {
@@ -39,6 +40,9 @@ body {
   font-weight: bold;
   font-size: 48px;
   text-transform: uppercase;
+  &--white {
+    color: $white;
+  }
 }
 
 // tag styles reset
