--- a/css/blocks/menu.scss
+++ b/css/blocks/menu.scss
@@ -1,4 +1,6 @@
 .menu {
     background: black url("../img/bg/menu-bg.jpg") no-repeat;
     background-size: cover;
+    padding: 90px 0px 0px 70px;
+    justify-content: flex-start;
 }
