--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,7 @@ $dark-brown: #281e1e;
 $text-grey: #666666;
 $light-grey: #f2f5f4;
 $dark-grey: #2a2a29;
+$dark-grey-opacity: rgba(47, 50, 52, 0.929);
 $title-dark-grey: #323232;
 $btn-green: #0f5a47;
 $btn-green-hover: #0b4d3c;
@@ -40,4 +41,5 @@ $icon-light-blue: #aef5fe;
 @import "./blocks/team.scss";
 @import "./blocks/accordeon.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/accordeon-menu.scss";
 
