--- a/css/blocks/accordeon-menu.scss
+++ b/css/blocks/accordeon-menu.scss
@@ -1,10 +1,9 @@
 .accordeon-menu {
     display: flex;
-    justify-content: flex-end;
     position: absolute;
     top: 0;
     right: 0;
-    height: 100vh;
+    height: 100%;
 }
 
 .accordeon-menu__item-collapsible {
@@ -42,13 +41,27 @@
 }
 
 .accordeon-menu__info {
+    position: relative;
     width: 0; 
     overflow: hidden;
     background-color: $dark-grey-opacity;
+    
     p {
         font-size: 16px;
-        line-height: 23px;
+        line-height: 24px;
+        margin: 65px 125px 10px 30px;
     }
 }
 
+.accordeon-menu__close-btn {
+    position: absolute;
+    top: 25px;
+    right: 30px;
+}
+
+.accordeon-menu__close-icon {
+    height: 18px;
+    width: 18px;
+    fill: $cross-light-grey;
+}
   
