--- a/css/misc/layout.scss
+++ b/css/misc/layout.scss
@@ -40,8 +40,11 @@ body {
   font-weight: bold;
   font-size: 48px;
   text-transform: uppercase;
-  &--white {
+  &--color--white {
     color: $white;
+  }
+  &--color--green {
+    color: $btn-green;
   }
 }
 
