Поменял марджины на паддинги в аккордеоне меню

--- a/css/blocks/accordeon-menu.scss
+++ b/css/blocks/accordeon-menu.scss
@@ -45,11 +45,11 @@
     width: 0; 
     overflow: hidden;
     background-color: $dark-grey-opacity;
+    padding: 65px 125px 10px 30px;
     
     p {
         font-size: 16px;
         line-height: 24px;
-        margin: 65px 125px 10px 30px;
     }
 }
 
