--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,7 @@ $dark-grey-opacity: rgba(47, 50, 52, 0.929);
 $title-dark-grey: #323232;
 $btn-green: #0f5a47;
 $btn-green-hover: #0b4d3c;
+$golden-khaki: #dde3bd;
 $light-green: #cfdeda;
 $bg-light-blue: #61c4d9;
 $icon-light-blue: #aef5fe;
@@ -42,6 +43,7 @@ $icon-light-blue: #aef5fe;
 @import "./blocks/reviews.scss";
 @import "./blocks/review-snippet.scss";
 @import "./blocks/order.scss";
+@import "./blocks/form.scss";
 @import "./blocks/fixed-menu.scss";
 @import "./blocks/team.scss";
 @import "./blocks/accordeon.scss";
