--- a/css/misc/layout.scss
+++ b/css/misc/layout.scss
@@ -40,6 +40,7 @@ body {
   font-weight: bold;
   font-size: 48px;
   text-transform: uppercase;
+  text-align: center;
   &--color--white {
     color: $white;
   }
